--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#010801" />
     <meta name="mobile-web-app-capable" content="yes" />
     <title>Finex AI</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' rx='18' fill='%23010801'/><polygon points='50,12 18,68 82,68' fill='none' stroke='%2300FF88' stroke-width='6' stroke-linejoin='round'/><polygon points='50,30 32,62 68,62' fill='%2300FF88' opacity='0.15'/><rect x='28' y='72' width='44' height='3' rx='1.5' fill='%2300FF88'/><circle cx='38' cy='82' r='4' fill='none' stroke='%2300FF88' stroke-width='2'/><circle cx='50' cy='82' r='4' fill='%2300FF88'/><circle cx='62' cy='82' r='4' fill='none' stroke='%2300FF88' stroke-width='2'/></svg>" />
+    <link rel="icon" href="/finex-logo.png" type="image/png" />
   </head>
   <body>
     <div id="root"></div>
